@@ -1,7 +1,7 @@
 package no.nav.data.common.security;
 
 import lombok.Data;
-import org.apache.commons.lang3.StringUtils;
+import org.apache.commons.lang3.Strings;
 import org.springframework.boot.context.properties.ConfigurationProperties;
 import org.springframework.context.annotation.Configuration;
 
@@ -24,7 +24,7 @@ public class SecurityProperties {
     private List<String> devEmailAllowList;
 
     public boolean isValidRedirectUri(String uri) {
-        return uri == null || safeStream(redirectUris).anyMatch(origin -> StringUtils.startsWithIgnoreCase(uri, origin));
+        return uri == null || safeStream(redirectUris).anyMatch(origin -> Strings.CI.startsWith(uri, origin));
     }
 
     public boolean isDev() {
@@ -32,7 +32,7 @@ public class SecurityProperties {
     }
 
     public String findBaseUrl() {
-        return tryFind(getRedirectUris(), uri -> uri.contains("teamkatalog.nav.no")).orElse(getRedirectUris().get(0));
+        return tryFind(getRedirectUris(), uri -> uri.contains("teamkatalog.nav.no")).orElse(getRedirectUris().getFirst());
     }
 
     public boolean isDevEmailAllowed(String email) {
