@@ -5,12 +5,14 @@ import lombok.extern.slf4j.Slf4j;
 import no.nav.data.AppStarter;
 import no.nav.data.common.TeamCatalogProps;
 import no.nav.data.common.auditing.domain.AuditVersionRepository;
+import no.nav.data.common.security.SecurityProperties;
 import no.nav.data.common.security.azure.AzureTokenProvider;
 import no.nav.data.common.storage.StorageService;
 import no.nav.data.common.storage.domain.GenericStorageRepository;
 import no.nav.data.common.unleash.UnleashClient;
 import no.nav.data.team.IntegrationTestBase.Initializer;
 import no.nav.data.team.location.LocationRepository;
+import no.nav.data.team.notify.UrlGenerator;
 import no.nav.data.team.org.OrgService;
 import no.nav.data.team.resource.NomClient;
 import no.nav.data.team.resource.domain.Resource;
@@ -34,6 +36,7 @@ import org.testcontainers.containers.PostgreSQLContainer;
 
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.anyString;
@@ -86,6 +89,12 @@ public abstract class IntegrationTestBase extends KafkaTestBase {
         auditVersionRepository.deleteAll();
         nomClient.clear();
         when(tokenProvider.getConsumerToken(anyString())).thenReturn("token");
+        SecurityProperties props = new SecurityProperties();
+        props.setRedirectUris(List.of("http://localhost:3000"));
+        props.setEnv("dev-fss");
+
+        // Initialize UrlGenerator with the configured properties
+        new UrlGenerator(props);
     }
 
     @AfterEach
@@ -94,7 +103,7 @@ public abstract class IntegrationTestBase extends KafkaTestBase {
     }
 
     protected Resource addNomResource(NomRessurs resource) {
-        return nomClient.add(Collections.singletonList(resource)).get(0);
+        return nomClient.add(Collections.singletonList(resource)).getFirst();
     }
 
     protected void addNomResources(NomRessurs... resources) {
